Overflow y problem fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-*{
-    overflow-x: hidden;
-}
-
 body{
     margin: 0;
     padding: 0;
